--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,34 @@
 version: '3.1'
 services:
   stats-server:
+    build: stats-server
+    image: stats-image
+    container_name: stats-container
     ports:
       - "9090:9090"
+    volumes:
+      - "/etc/timezone:/etc/timezone:ro"
+      - "/etc/localtime:/etc/localtime:ro"
+    depends_on:
+      - stats-db
 
   stats-db:
     image: postgres:14-alpine
+    container_name: stats-db-container
+
 
   ewm-service:
+    build: main-service
+    image: main-image
+    container_name: main-container
     ports:
       - "8080:8080"
+    volumes:
+      - "/etc/timezone:/etc/timezone:ro"
+      - "/etc/localtime:/etc/localtime:ro"
+    depends_on:
+      - ewm-db
 
   ewm-db:
     image: postgres:14-alpine
+    container_name: ewm-db-container
