--- a/stats/stats-server/src/main/resources/application.properties
+++ b/stats/stats-server/src/main/resources/application.properties
@@ -27,7 +27,7 @@
 
 
 server.port=9090
-stats.stats-server.url=http://localhost:9090
+#stats.stats-server.url=http://localhost:9090
 spring.sql.init.mode=always
 spring.datasource.username=stats
 spring.datasource.url=jdbc:postgresql://localhost:5432/stats
