--- a/stats/stats-client/src/main/resources/application.properties
+++ b/stats/stats-client/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 stats-server.url=http://localhost:9090
-logging.level.org.springframework.web.client.RestTemplate=DEBUG
+#logging.level.org.springframework.web.client.RestTemplate=DEBUG
