--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,9 @@ services:
     container_name: stats-container
     ports:
       - "9090:9090"
-
+    volumes:
+      - "/etc/timezone:/etc/timezone:ro"
+      - "/etc/localtime:/etc/localtime:ro"
     depends_on:
       - stats-db
     environment:
@@ -16,6 +18,9 @@ services:
     container_name: stats-db-container
     ports:
       - "6541:5432"
+    volumes:
+      - "/etc/timezone:/etc/timezone:ro"
+      - "/etc/localtime:/etc/localtime:ro"
 
     environment:
       - POSTGRES_DB=stats
@@ -28,6 +33,9 @@ services:
     container_name: main-container
     ports:
       - "8080:8080"
+    volumes:
+      - "/etc/timezone:/etc/timezone:ro"
+      - "/etc/localtime:/etc/localtime:ro"
 
     depends_on:
       - ewm-db
@@ -42,6 +50,9 @@ services:
     container_name: ewm-db-container
     ports:
       - "6542:5432"
+    volumes:
+      - "/etc/timezone:/etc/timezone:ro"
+      - "/etc/localtime:/etc/localtime:ro"
 
     environment:
       - POSTGRES_DB=ewm
