--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8080
+stats-server.url=http://localhost:9090
 spring.sql.init.mode=always
 spring.datasource.username=ewm
 spring.datasource.url=jdbc:postgresql://localhost:5432/ewm
